--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<center><h1>Welcome to gay.com</h1></center>
+<center><h1>Welcome!</h1></center>
 </head>
   <body>
-    <p>hello world</p>
+    <p>This is my first website and it is Awesome!</p>
   </body>
 </html>
